--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://js.stripe.com/v3/"></script>
+  <script src="https://js.pusher.com/7.0/pusher.min.js"></script>
 </head>
 
 <body>
